# AI_ML_Projects

./: README.md  app.py  app2.py
.streamlit/: secrets.toml
Deep_Research/: checking.py  main.py  pyproject.toml
Deep_Research/Deep_research_from_scratch/: prompts.py  state_scope.py
Sms_Spam_Detection/: app.py  index.html  sms.pkl  sms_spam_detection.ipynb
Sms_Spam_Detection/.ipynb_checkpoints/: sms_spam_detection-checkpoint.ipynb
movie_recommendation_system/: app.py  movie_recemendation_system.ipynb  movies.pkl
testing_project/: app.py  main.py  requirements.txt  train.py
testing_project/api/: index.py  main.py
testing_project_2/: vercel.json
testing_project_3/: chatbot.html  index.html
testing_project_4/: Dockerfile
testing_project_4/builder/: requirements.txt
testing_project_4/src/: rp_handler.py
